# analyse-CFA-automatically

./: .gitignore  LICENSE  README.md  TUTORIAL.md  analyze_cfa_plate_one.py  batch_cfa_colony_area.py  calculate_colony_area.py  pyproject.toml  requirements.txt
tests/: test_batch_cfa_colony_area.py
